Bug 1444525: Extract the logic to see if we're a top-level chrome window. r=bz

MozReview-Commit-ID: C9x7AwYR99n